reduced image sizes
also centered images

--- a/digital_art.html
+++ b/digital_art.html
@@ -53,8 +53,8 @@
         <!-- end of main navigation -->
 
 
-        <div class="large-12 small-12">
-          <img class="portfolioImage" src="images/binary_bg_1280.png" alt="Eroded Binary">
+        <div class="cell large-12 small-12">
+          <img class="portfolioImage ctrImgWide" src="images/reduced_sizes/binary_720.png" alt="Eroded Binary">
         </div>
         <div class="cell large-3 small-12">
           <p class="txtThumb">
@@ -110,7 +110,7 @@
     </div>
 
         <div class="large-6 small-12 portfolioSpacing">
-          <img class="portfolioImage" src="images/Fiona_portrait_doggified.jpg" alt="Fiona, but Nika-fied">
+          <img class="portfolioImage ctrImgTall" src="images/reduced_sizes/Fiona_portrait_doggified_720.jpg" alt="Fiona, but Nika-fied">
         </div>
         <div class="large-6 small-12 portfolioSpacing">
         <div class="cell">
@@ -127,11 +127,11 @@
 
 
         <div class="large-12 small-12 portfolioSpacing">
-          <img class="portfolioImage" src="images/Doggie_Comfort_Brochure_Trifold_Outside.png" alt="Doggie Comfort Brochure Outside">
+          <img class="portfolioImage ctrImgWide" src="images/reduced_sizes/Doggie_Comfort_Brochure_Trifold_Outside_720.png" alt="Doggie Comfort Brochure Outside">
         </div>
 
         <div class="large-12 small-12">
-          <img class="portfolioImage" src="images/Doggie_Comfort_Brochure_Trifold_Inside.png" alt="Doggie Comfort Brochure Inside">
+          <img class="portfolioImage ctrImgWide" src="images/reduced_sizes/Doggie_Comfort_Brochure_Trifold_Inside_720.png" alt="Doggie Comfort Brochure Inside">
         </div>
 
         <div class="cell large-3 small-12">
@@ -147,15 +147,15 @@
 
 
         <div class="large-12 small-12 portfolioSpacing">
-          <img class="portfolioImage" src="images/morton_character_redesign.png" alt="Morton and Dolbi Character Design">
+          <img class="portfolioImage ctrImgWide" src="images/reduced_sizes/morton_character_redesign_720.png" alt="Morton and Dolbi Character Design">
         </div>
 
         <div class="large-12 small-12">
-          <img class="portfolioImage" src="images/morton_comic_1.png" alt="Morton calls for Dolbi, and Dolbi grabs a lizard instead.">
+          <img class="portfolioImage ctrImgWide" src="images/reduced_sizes/morton_comic_1_720.png" alt="Morton calls for Dolbi, and Dolbi grabs a lizard instead.">
         </div>
 
         <div class="large-12 small-12">
-          <img class="portfolioImage" src="images/morton_comic_2.png" alt="Morton gets exhausted yelling and chasing Dobli. Dolbi trips the hot dog guy, Mario.">
+          <img class="portfolioImage ctrImgWide" src="images/reduced_sizes/morton_comic_2_720.png" alt="Morton gets exhausted yelling and chasing Dobli. Dolbi trips the hot dog guy, Mario.">
         </div>
 
 
