--- a/painting.html
+++ b/painting.html
@@ -53,7 +53,7 @@
         <!-- end of main navigation -->
 
         <div class="large-12 small-12">
-          <img class="portfolioImage" src="images/The_mammoth_in_the_room.png" alt="The elephant">
+          <img class="portfolioImage ctrImgWide" src="images/reduced_sizes/The_mammoth_in_the_room_720.png" alt="The elephant">
         </div>
         <div class="cell large-3 small-12">
           <p class="txtThumb">
@@ -67,7 +67,7 @@
       </div>
 
       <div class="large-12 small-12 portfolioSpacing">
-        <img class="portfolioImage" src="images/House.png" alt="The house">
+        <img class="portfolioImage ctrImgWide" src="images/reduced_sizes/House_720.png" alt="The house">
       </div>
       <div class="cell large-3 small-12">
         <p class="txtThumb">
