--- a/photography.html
+++ b/photography.html
@@ -53,7 +53,7 @@
         <!-- end of main navigation -->
 
         <div class="large-12 small-12">
-          <img class="portfolioImage" src="images/Mystery_Bowl.png" alt="I don't know what this bowl thing is.">
+          <img class="portfolioImage ctrImgWide" src="images/reduced_sizes/Mystery_Bowl_720.png" alt="I don't know what this bowl thing is.">
 
 
 
@@ -71,7 +71,7 @@
       </div>
 
       <div class="large-12 small-12 portfolioSpacing">
-        <img class="portfolioImage" src="images/Soda.png" alt="Carbonation">
+        <img class="portfolioImage ctrImgWide" src="images/reduced_sizes/Soda_720.png" alt="Carbonation">
       </div>
       <div class="cell large-3 small-12">
         <p class="txtThumb">
@@ -85,7 +85,7 @@
     </div>
 
       <div class="large-12 small-12 portfolioSpacing">
-        <img class="portfolioImage" src="images/HN.png" alt="A shot of Honolulu">
+        <img class="portfolioImage ctrImgWide" src="images/reduced_sizes/HN_720.png" alt="A shot of Honolulu">
       </div>
       <div class="cell large-3 small-12">
         <p class="txtThumb">
@@ -99,7 +99,7 @@
     </div>
 
     <div class="large-12 small-12 portfolioSpacing">
-      <img class="portfolioImage" src="images/Moon.png" alt="Telescopes!">
+      <img class="portfolioImage ctrImgTall" src="images/reduced_sizes/Moon_720.png" alt="Telescopes!">
     </div>
     <div class="cell large-3 small-12">
       <p class="txtThumb">
