--- a/photography.html
+++ b/photography.html
@@ -66,7 +66,7 @@
         <div class="cell large-9 small-12">
           <p class="txtDesc">
         Yeah, I don't really know where this came from.  Speculation tells me the bowl is some sort of experiment used to
-        examine intereference patterns of light on itself, plus a random DI water squirter.
+        examine interference patterns of light on itself, plus a random DI water squirter.
       </p>
       </div>
 
