Senior Project Upload
finally
10-18-2019

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,8 +54,10 @@
 
         <div class="cell large-6 small-12">
           <div class="thumbz">
-            <img class="float-center" src="images\cloth_thumb.png" height="500px" width="500px">
-            <p class="txtThumb"> Senior Project </p>
+            <a href="senior_project.html">
+              <img class="float-center" src="images\cloth_thumb.png" height="500px" width="500px">
+              <p class="txtThumb"> Senior Project </p>
+            </a>
           </div>
         </div>
         <div class="cell large-6 small-12">
