--- a/senior_project.html
+++ b/senior_project.html
@@ -47,33 +47,45 @@
             </ul>
           </nav>
           <div class="cell large-10 small-12 whereAreYou txtwhite">
-              Portfolio
+              Senior Project: GRID
           </div>
         <hr width="90%">
         <!-- end of main navigation -->
 
         <div class="cell large-6 small-12">
           <div class="thumbz">
-            <img class="float-center" src="images\cloth_thumb.png" height="500px" width="500px">
-            <p class="txtThumb"> Senior Project </p>
+            <img class="float-center bookletfixL" src="images\senior_project_photos\lookbook_front_pre.png" height="500px" width="500px">
+            <p class="txtThumb">  </p>
           </div>
         </div>
         <div class="cell large-6 small-12">
           <div class="thumbz">
-            <img class="float-center" src="images/digital_thumb.png" height="500px" width="500px">
-            <p class="txtThumb"> Digital Art </p>
+            <img class="float-center bookletfixR" src="images\senior_project_photos\lookbook_back_pre.png" height="500px" width="500px">
+            <p class="txtThumb"> </p>
           </div>
         </div>
-        <div class="cell large-6 small-12">
+        <div class="cell large-12 small-12">
           <div class="thumbz">
-            <img class="float-center" src="images/photo_thumb.png" height="500px" width="500px">
-            <p class="txtThumb"> Photography </p>
+            <img class="float-center" src="images\senior_project_photos\stairs_pre.png">
+            <p class="txtThumb"></p>
           </div>
         </div>
-        <div class="cell large-6 small-12">
+        <div class="cell large-12 small-12">
           <div class="thumbz">
-            <img class="float-center" src="images/paint_thumb.png" height="500px" width="500px">
-            <p class="txtThumb"> Painting </p>
+            <img class="float-center" src="images\senior_project_photos\the_five_pre.png">
+            <p class="txtThumb"></p>
+          </div>
+        </div>
+        <div class="cell large-12 small-12">
+          <div class="thumbz">
+            <img class="float-center" src="images\senior_project_photos\tags_pre.png">
+            <p class="txtThumb"></p>
+          </div>
+        </div>
+        <div class="cell large-12 small-12">
+          <div class="thumbz">
+            <img class="float-center" src="images\senior_project_photos\redsun_folded_pre.png">
+            <p class="txtThumb"></p>
           </div>
         </div>
 
