dog page size fixes
were too big

--- a/dogs.html
+++ b/dogs.html
@@ -99,11 +99,11 @@
 </div>
 
       <div class="large-12 small-12 dogPhoto">
-      <img src="images/Sleepy_Bee.png" alt="Bee Asleep">
+      <img src="images/Sleepy_Bee_pre.png" alt="Bee Asleep">
       </div>
 
       <div class="large-12 small-12 dogPhoto">
-      <img src="images/Awake_Bee.png" alt="Bee Awake">
+      <img src="images/Awake_Bee_pre.png" alt="Bee Awake">
       </div>
       </div>
     </div><!-- closes the container-->
